# tappy

./: .gitignore  LICENSE  README.md  pyproject.toml
tappy/: __init__.py  __main__.py  app.py  cli.py  output.py
tappy/core/: __init__.py  config_store.py  mcp_probe.py  models.py  registry.py  resolve.py  security.py
tappy/core/adapters/: __init__.py  base.py  claude_code.py  claude_desktop.py  cursor.py  generic.py
tappy/ui/: __init__.py  confirm.py  server_form.py  tool_runner.py
tests/: test_adapters.py  test_cli.py  test_config_store.py  test_registry.py  test_security.py
