[project]
name = "tappy"
version = "0.1.0"
description = "A terminal app to discover, configure, run, inspect, monitor and debug MCP servers across AI clients."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "tappy" }]
license = { text = "MIT" }
dependencies = [
    "textual>=0.80",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.6",
]

[project.scripts]
tappy = "tappy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tappy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
